// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigNumbers click show all 1`] = `
<DocumentFragment>
  <div
    class="sc-dnqmqq hHfasZ"
  >
    <div
      class="sc-iwsKbI fMDvHO"
    >
      <div
        class="sc-bwzfXH hwAlqD"
      >
        President Race
      </div>
      <div
        class="sc-gzVnrw cqivXS"
      >
        The stats behind the two candidates
      </div>
      <div
        class="sc-EHOje kSjPZf"
      >
        <ul
          class="sc-ifAKCX LUyZI"
        >
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              $497.8m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Money raised by Hillary Clinton
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              $247.8m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Money raised by Donald Trump
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              71.6m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              The number of people who turned in to the final president debate
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              2-7
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Clinton’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              3-1
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Trump’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sc-bZQynM iNwlGF"
    >
      <button
        class="sc-htoDjs sc-gZMcBi dldfZR"
      >
        Collapse
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BigNumbers should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dwiMsX"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`BigNumbers should render the standard component 1`] = `
<DocumentFragment>
  <div
    class="sc-dnqmqq hHfasZ"
  >
    <div
      class="sc-iwsKbI fMDvHO"
    >
      <div
        class="sc-bwzfXH hwAlqD"
      >
        President Race
      </div>
      <div
        class="sc-gzVnrw cqivXS"
      >
        The stats behind the two candidates
      </div>
      <div
        class="sc-EHOje kSjPZf"
      >
        <ul
          class="sc-ifAKCX LUyZI"
        >
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              $497.8m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Money raised by Hillary Clinton
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              $247.8m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Money raised by Donald Trump
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              71.6m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              The number of people who turned in to the final president debate
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              2-7
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Clinton’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
          <li
            class="sc-gqjmRU ejoKUJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              3-1
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Trump’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sc-bZQynM iNwlGF"
    >
      <button
        class="sc-htoDjs sc-gZMcBi dldfZR"
      >
        Show all
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BigNumbers should render the wide component 1`] = `
<DocumentFragment>
  <div
    class="sc-dnqmqq gFoWtC"
  >
    <div
      class="sc-iwsKbI fMDvHO"
    >
      <div
        class="sc-bwzfXH hwAlqD"
      >
        President Race
      </div>
      <div
        class="sc-gzVnrw cqivXS"
      >
        The stats behind the two candidates
      </div>
      <div
        class="sc-EHOje kSjPZf"
      >
        <ul
          class="sc-ifAKCX LUyZI"
        >
          <li
            class="sc-gqjmRU dvjqsJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              $497.8m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Money raised by Hillary Clinton
            </div>
          </li>
          <li
            class="sc-gqjmRU dvjqsJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              $247.8m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Money raised by Donald Trump
            </div>
          </li>
          <li
            class="sc-gqjmRU dvjqsJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              71.6m
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              The number of people who turned in to the final president debate
            </div>
          </li>
          <li
            class="sc-gqjmRU dvjqsJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              2-7
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Clinton’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
          <li
            class="sc-gqjmRU dvjqsJ"
          >
            <div
              class="sc-VigVT lbzqVL"
            >
              3-1
            </div>
            <div
              class="sc-bxivhb bPVvqJ"
            >
              Trump’s odds of winning the US election (provided by Paddy Power)
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="sc-bZQynM iNwlGF"
    >
      <button
        class="sc-htoDjs sc-gZMcBi dldfZR"
      >
        Show all
      </button>
    </div>
  </div>
</DocumentFragment>
`;
